fix: Store artifacts and name based on architecture

--- a/.github/workflows/golang-binary.yaml
+++ b/.github/workflows/golang-binary.yaml
@@ -16,6 +16,11 @@ on:
         default: "-ldflags=\"-w -s\""
         type: string
         description: "Flags to be passed to the build process"
+      retention-days:
+        required: false
+        default: 2
+        type: number
+        description: "Number of days to keep the binary in the artifact store"
       os:
         required: false
         default: "linux"
@@ -51,11 +56,18 @@ jobs:
       run: go mod download
 
     - name: Build
-      run: go build ${{ inputs.build-flags }} -o "./${{ github.repository }}.bin" ${{ inputs.source-path }}
+      run: go build ${{ inputs.build-flags }} -o "./${{ github.repository }}.${{ (inputs.os == 'windows' && 'exe') || 'bin' }}" ${{ inputs.source-path }}
       env:
         GOOS: ${{ inputs.os }}
         GOARCH: ${{ inputs.arch }}
+  
+    - name: Store binaries
+      uses: actions/upload-artifact@v3
+      with:
+        path: ./${{ github.repository }}.*
+        if-no-files-found: ignore
+        retention-days: ${{ inputs.retention-days }}
 
     - name: Output binary path
       id: bin-ouput
-      run: echo "binary_path=${{ github.repository }}.bin" >> $GITHUB_OUTPUT
+      run: echo "binary_path=${{ github.repository }}.${{ (inputs.os == 'windows' && 'exe') || 'bin' }}" >> $GITHUB_OUTPUT
