fix: Check if cancelled correctly

--- a/.github/workflows/golang-testing-small-correctness.yaml
+++ b/.github/workflows/golang-testing-small-correctness.yaml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Store test reports
       uses: actions/upload-artifact@v3
-      if: !cancelled()
+      if: ${{ !cancelled() }}
       with:
         name: Test small reports
         path: |
