--- a/.github/workflows/golang-binary.yaml
+++ b/.github/workflows/golang-binary.yaml
@@ -64,7 +64,7 @@ jobs:
     - name: Store binaries
       uses: actions/upload-artifact@v4
       with:
-        name: Binaries
+        name: Binaries-${{ inputs.os }}-${{ inputs.arch }}
         path: ./${{ github.repository }}*
         if-no-files-found: ignore
         retention-days: ${{ inputs.retention-days }}
