--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           go-version-file: ${{ inputs.mod-path }}
 
+      # GoSec
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
@@ -58,3 +59,15 @@ jobs:
         if: ${{ !cancelled() && inputs.upload-sarif }}
         with:
           sarif_file: gosec.sarif
+
+      # Github CodeQL
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: "go"
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v1
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
