--- a/.github/workflows/golang-binary.yaml
+++ b/.github/workflows/golang-binary.yaml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout code into the Go module directory
+    - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Set up Go 1.x
