--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -31,6 +31,11 @@ on:
         default: false
         type: boolean
         description: "Login to AWS ECR, by default it is false. If true, expects aws-region, aws-access-key-id and aws-secret-access-key to be set"
+      aws-registry:
+        required: false
+        default: ""
+        type: string
+        description: "AWS ECR registry to push to"
       aws-region:
         required: false
         default: ""
@@ -81,6 +86,7 @@ jobs:
           aws-region: ${{ inputs.aws-region }}
 
       - name: Login to AWS ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         if: ${{ !cancelled() && inputs.login-aws }}
         with:
@@ -109,7 +115,7 @@ jobs:
         with:
           images: |
             inputs.image-name,enable=${{ !cancelled() && inputs.image-name != '' }}
-            ${{ steps.login-ecr.outputs.registry }}/${{ env.AWS_ECR_REPOSITORY }},enable=${{ !cancelled() && inputs.login-aws && inputs.image-name == '' }}
+            ${{ steps.login-ecr.outputs.registry }}/${{ inputs.aws-registry }},enable=${{ !cancelled() && inputs.login-aws && inputs.image-name == '' && inputs.aws-registry != '' }}
             ghcr.io/${{ github.repository }}-${{ github.event.pull_request.head.ref }},enable=${{ !cancelled() && inputs.login-ghcr && inputs.image-name == '' }}
           tags: |
             type=raw,value=${{ inputs.image-tag }},enable=${{ !cancelled() && inputs.image-tag != '' }}
