--- a/.github/workflows/image-security.yaml
+++ b/.github/workflows/image-security.yaml
@@ -21,16 +21,6 @@ on:
         default: ""
         type: string
         description: "AWS region to use for ECR login"
-      aws-access-key-id:
-        required: false
-        default: ""
-        type: string
-        description: "AWS access key ID to use for ECR login"
-      aws-secret-access-key:
-        required: false
-        default: ""
-        type: string
-        description: "AWS secret access key to use for ECR login"
       login-ghcr:
         required: false
         default: false
@@ -41,10 +31,15 @@ on:
         default: ""
         type: string
         description: "GitHub Container Registry username to use for login"
+    secrets:
+      aws-access-key-id:
+        required: false
+        description: "AWS access key ID to use for ECR login"
+      aws-secret-access-key:
+        required: false
+        description: "AWS secret access key to use for ECR login"
       ghcr-token:
         required: false
-        default: ""
-        type: string
         description: "GitHub Container Registry token to use for login"
 
 jobs:
@@ -85,8 +80,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         if: ${{ !cancelled() && inputs.login-aws }}
         with:
-          aws-access-key-id: ${{ inputs.aws-access-key-id }}
-          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+          aws-access-key-id: ${{ secrets.aws-access-key-id }}
+          aws-secret-access-key: ${{ secrets.aws-secret-access-key }}
           aws-region: ${{ inputs.aws-region }}
 
       - name: Login to AWS ECR
