fix: Run find correctly

--- a/.github/workflows/golang-testing-small.yaml
+++ b/.github/workflows/golang-testing-small.yaml
@@ -117,4 +117,4 @@ jobs:
       run: go mod download
 
     - name: Fuzz tests
-      run: find . -maxdepth 3 -type d \( ! -name . \) -not -path "./.git/*" -exec bash -c "cd '{}' && go test --fuzz=. --fuzztime=10s"
+      run: find . -maxdepth 3 -type d \( ! -name . \) -not -path "./.git/*" -exec bash -c "cd '{}' && go test --fuzz=. --fuzztime=10s" \;
