--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -69,7 +69,7 @@ on:
     outputs:
       image:
         description: "The full name of the image. Only use if image-upload is true"
-        value: ${{ jobs.create.outputs.image }}
+        value: ${{ jobs.Create.outputs.image }}
 
 jobs:
   Create:
