fix: Prefix image names if not provided

--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -121,7 +121,8 @@ jobs:
         if: ${{ !cancelled() && inputs.login-aws }}
         with:
           images: |
-            ${{ inputs.image-name }},enable=${{ inputs.image-name != '' }}
+            ${{ inputs.image-name }},enable=${{ inputs.image-name != '' && startsWith(inputs.image-name, steps.login-ecr.outputs.registry) }}
+            ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, steps.login-ecr.outputs.registry) }}
             ${{ steps.login-ecr.outputs.registry }}/${{ inputs.aws-registry }},enable=${{ inputs.login-aws && inputs.image-name == '' && inputs.aws-registry != '' }}
           tags: |
             type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
@@ -135,7 +136,8 @@ jobs:
         if: ${{ !cancelled() && inputs.login-ghcr }}
         with:
           images: |
-            ${{ inputs.image-name }},enable=${{ inputs.image-name != '' }}
+            ${{ inputs.image-name }},enable=${{ inputs.image-name != '' && startsWith(inputs.image-name, 'ghcr.io/') }}
+            ghcr.io/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, 'ghcr.io/') }}
             ghcr.io/${{ github.repository }},enable=${{ inputs.login-ghcr && inputs.image-name == '' }}
           tags: |
             type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
