--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -148,6 +148,7 @@ jobs:
       - name: Build and push
         id: build-aws
         uses: docker/build-push-action@v5
+        if: ${{ !cancelled() && inputs.login-aws }}
         with:
           push: ${{ inputs.image-upload }}
           platforms: ${{ inputs.image-platforms }}
@@ -160,6 +161,7 @@ jobs:
       - name: Build and push
         id: build-ghcr
         uses: docker/build-push-action@v5
+        if: ${{ !cancelled() && inputs.login-ghcr }}
         with:
           push: ${{ inputs.image-upload }}
           platforms: ${{ inputs.image-platforms }}
