fix: Move shas to be the first item, and reference that in output

--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -125,8 +125,8 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, steps.login-ecr.outputs.registry) }}
             ${{ steps.login-ecr.outputs.registry }}/${{ inputs.aws-registry }},enable=${{ inputs.login-aws && inputs.image-name == '' && inputs.aws-registry != '' }}
           tags: |
-            type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
             type=sha,format=long
+            type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
           labels: |
             ${{ inputs.image-labels }}
 
@@ -140,8 +140,8 @@ jobs:
             ghcr.io/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, 'ghcr.io/') }}
             ghcr.io/${{ github.repository }},enable=${{ inputs.login-ghcr && inputs.image-name == '' }}
           tags: |
-            type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
             type=sha,format=long
+            type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
           labels: |
             ${{ inputs.image-labels }}
 
@@ -174,4 +174,4 @@ jobs:
       - name: Set output
         id: set-output
         if: ${{ inputs.image-upload }}
-        run: echo "image=${{ steps.build-aws.outputs.imageid }}${{ steps.build-ghcr.outputs.imageid }}" >> $GITHUB_OUTPUT
+        run: echo "image=${{ fromJSON(steps.meta-aws.outputs.json).tags[0] }}${{ fromJSON(steps.meta-ghcr.outputs.json).tags[0] }}" >> $GITHUB_OUTPUT
