fix: Consistently use - instead of _

--- a/.github/workflows/testing-medium-postman.yaml
+++ b/.github/workflows/testing-medium-postman.yaml
@@ -1,11 +1,11 @@
 on:
   workflow_call:
     inputs:
-      collection_id:
+      collection-id:
         required: true
         type: string
         description: "The collection to run"
-      environment_id:
+      environment-id:
         required: true
         type: string
         description: "The environment to run"
