--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -1,6 +1,11 @@
 on:
   workflow_call:
     inputs:
+      working-directory:
+        required: false
+        default: "./"
+        type: string
+        description: "Working directory to base all other paths on"
       mod-path:
         required: false
         default: "./go.mod"
@@ -16,6 +21,9 @@ jobs:
   SCA:
     name: SCA
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.working-directory }}
     steps:
 
     - name: Checkout code
@@ -38,6 +46,9 @@ jobs:
   SAST:
     name: SAST
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.working-directory }}
     steps:
 
       - name: Checkout code
