--- a/.github/workflows/golang-binary.yaml
+++ b/.github/workflows/golang-binary.yaml
@@ -41,6 +41,11 @@ on:
         default: "Binaries-"
         type: string
         description: "Prefix for the binary name"
+      artifact-postfix:
+        required: false
+        default: ""
+        type: string
+        description: "Postfix to append to the artifact name. Should start with a dash (-)"
 
 jobs:
   binary:
@@ -70,7 +75,7 @@ jobs:
     - name: Store binaries
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ inputs.binary-prefix }}${{ inputs.os }}-${{ inputs.arch }}
+        name: ${{ inputs.binary-prefix }}${{ inputs.os }}-${{ inputs.arch }}${{ inputs.artifact-postfix }}
         path: ./${{ inputs.working-directory }}/${{ github.repository }}*
         if-no-files-found: ignore
         retention-days: ${{ inputs.retention-days }}
