fix(869320ruj): Replace all instances in string

--- a/.github/workflows/golang-binary.yaml
+++ b/.github/workflows/golang-binary.yaml
@@ -79,6 +79,7 @@ jobs:
           source: ${{ inputs.artifact-postfix }} 
           find: "/"
           replace: "-"
+          replaceAll: true
 
     - name: Store binaries
       uses: actions/upload-artifact@v4
