--- a/.github/workflows/golang-testing-small.yaml
+++ b/.github/workflows/golang-testing-small.yaml
@@ -77,6 +77,7 @@ jobs:
           source: ${{ inputs.artifact-postfix }} 
           find: "/"
           replace: "-"
+          replaceAll: true
 
     - name: Store test reports
       uses: actions/upload-artifact@v4
@@ -119,6 +120,7 @@ jobs:
           source: ${{ inputs.artifact-postfix }} 
           find: "/"
           replace: "-"
+          replaceAll: true
 
     - name: Store test reports
       uses: actions/upload-artifact@v4
