--- a/.github/workflows/golang-testing-small.yaml
+++ b/.github/workflows/golang-testing-small.yaml
@@ -5,7 +5,7 @@ on:
         required: false
         default: "./"
         type: string
-        description: "Working directory to base all other paths on"
+        description: "Working directory to base all other paths on. Should end with a slash (/)"
       mod-path:
         required: false
         default: "./go.mod"
@@ -60,7 +60,7 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v5
       with:
-        go-version-file: "${{ inputs.working-directory }}/${{ inputs.mod-path }}"
+        go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
 
     - name: Get dependencies
       run: go mod download && go install gotest.tools/gotestsum@latest
@@ -85,8 +85,8 @@ jobs:
       with:
         name: Test small reports - Correctness${{ steps.sanitize-artifact-postfix.outputs.value }}
         path: |
-          ./${{ inputs.working-directory }}/correctness-tests.xml
-          ./${{ inputs.working-directory }}/correctness-tests-coverage.out
+          ./${{ inputs.working-directory }}correctness-tests.xml
+          ./${{ inputs.working-directory }}correctness-tests-coverage.out
         if-no-files-found: ignore
         retention-days: ${{ inputs.retention-days }}
 
@@ -102,7 +102,7 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v5
       with:
-        go-version-file: "${{ inputs.working-directory }}/${{ inputs.mod-path }}"
+        go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
 
     - name: Get dependencies
       run: go mod download
@@ -127,7 +127,7 @@ jobs:
       if: ${{ !cancelled() }}
       with:
         name: Test small reports - Performance${{ steps.sanitize-artifact-postfix.outputs.value }}
-        path: ./${{ inputs.working-directory }}/performance-tests.txt
+        path: ./${{ inputs.working-directory }}performance-tests.txt
         if-no-files-found: ignore
         retention-days: ${{ inputs.retention-days }}
 
@@ -143,7 +143,7 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v5
       with:
-        go-version-file: "${{ inputs.working-directory }}/${{ inputs.mod-path }}"
+        go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
 
     - name: Get dependencies
       run: go mod download
