--- a/.github/workflows/golang-linting.yaml
+++ b/.github/workflows/golang-linting.yaml
@@ -35,6 +35,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+        cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
     - name: Check formatting
       run: go fmt ${{ inputs.source-path }}
