--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -30,6 +30,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+        cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
     - name: Write Go List
       run: go list -json -m > go.list
@@ -53,6 +54,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+          cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
       # GoSec
       - name: Run Gosec Security Scanner
