--- a/.github/workflows/golang-testing-small.yaml
+++ b/.github/workflows/golang-testing-small.yaml
@@ -61,6 +61,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+        cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
     - name: Get dependencies
       run: go mod download && go install gotest.tools/gotestsum@latest
@@ -103,6 +104,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+        cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
     - name: Get dependencies
       run: go mod download
@@ -144,6 +146,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: "${{ inputs.working-directory }}${{ inputs.mod-path }}"
+        cache-dependency-path: "${{ inputs.working-directory }}go.sum"
 
     - name: Get dependencies
       run: go mod download
