fix(869320ruj): Setup mod path for govulncheck

--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -40,7 +40,7 @@ jobs:
     - name: Govulncheck
       uses: golang/govulncheck-action@v1
       with:
-        go-package: "./${{ inputs.working-directory }}..."
+        go-package: "${{ inputs.working-directory }}..."
 
   SAST:
     name: SAST
