fix(869320ruj): Use correct work directory

--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -40,7 +40,8 @@ jobs:
     - name: Govulncheck
       uses: golang/govulncheck-action@v1
       with:
-        go-package: "${{ inputs.working-directory }}..."
+        go-package: "./..."
+        work-dir: ${{ inputs.working-directory }}
 
   SAST:
     name: SAST
