--- a/.github/workflows/golang-security.yaml
+++ b/.github/workflows/golang-security.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          args: '-no-fail -fmt sarif -out gosec.sarif ./${{ inputs.working-directory }}...'
+          args: '-no-fail -fmt sarif -out gosec.sarif ${{ inputs.working-directory }}...'
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
