--- a/.github/workflows/image-create.yaml
+++ b/.github/workflows/image-create.yaml
@@ -130,7 +130,7 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, steps.login-ecr.outputs.registry) }}
             ${{ steps.login-ecr.outputs.registry }}/${{ inputs.aws-registry }},enable=${{ inputs.login-aws && inputs.image-name == '' && inputs.aws-registry != '' }}
           tags: |
-            type=sha,format=long
+            type=sha,format=long,enable=${{ github.event_name == 'push' }}
             type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
           labels: |
             ${{ inputs.image-labels }}
@@ -145,7 +145,7 @@ jobs:
             ghcr.io/${{ inputs.image-name }},enable=${{ inputs.image-name != '' && !startsWith(inputs.image-name, 'ghcr.io/') }}
             ghcr.io/${{ github.repository }},enable=${{ inputs.login-ghcr && inputs.image-name == '' }}
           tags: |
-            type=sha,format=long
+            type=sha,format=long,enable=${{ github.event_name == 'push' }}
             type=raw,value=${{ inputs.image-tag }},enable=${{ inputs.image-tag != '' }}
           labels: |
             ${{ inputs.image-labels }}
